--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack serve --config ./webpack.config.js --mode development",
-    "serve": "webpack serve"
+    "build": "rm -rf dist && webpack --mode development",
+    "serve": "webpack serve",
+    "dev": "nodemon app.js"
   },
   "author": "Maggie Love",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.9.1",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
@@ -18,13 +21,19 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.17",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "nodemon": "^3.0.3",
+    "prisma": "^5.9.1",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
