--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "job_board",
+  "name": "criteria_collection",
   "version": "1.0.0",
-  "description": "job board POC",
+  "description": "app inspired by film streaming site",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
