--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
