Unit tests WIP + style updates

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
   "presets": [
-    "@babel/preset-react"
-  ]
+    ["@babel/preset-react",
+    { "runtime": "automatic" }
+  ]],
+  "env": {
+      "test": {
+        "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      }
+    }
 }
