--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "app inspired by film streaming site",
   "main": "index.js",
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest",
+      "^.+\\.scss$": "jest-scss-transform"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "build": "rm -rf dist && webpack --mode development",
     "serve": "webpack serve",
     "dev": "nodemon app.js"
@@ -21,13 +28,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
     "@babel/preset-react": "^7.23.3",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-scss-transform": "^1.0.3",
+    "jsdom": "^24.0.0",
+    "msw": "^2.2.13",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
     "sass": "^1.70.0",
