--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-slideshow-image": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
