--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "babel-loader": "^9.1.3",
+    "classnames": "^2.5.1",
     "css-loader": "^6.10.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
