--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.12.5",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "babel-loader": "^9.1.3",
     "classnames": "^2.5.1",
     "css-loader": "^6.10.0",
@@ -52,7 +54,9 @@
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.2",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
